--- a/template/abc.pug
+++ b/template/abc.pug
@@ -5,5 +5,5 @@ html
         
     body
         h1(class="hh") Hello world  
-        h2(class="hh") #{name}
         h3(class="hh") #{age}
+        h4(class="new") #{marks}
