--- a/template/frm.pug
+++ b/template/frm.pug
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Document
-    body
+extends base.pug
+block title
+    title input page
+block content
+    div
         div
             div
-                div
-                    form(action="/new", method="post")
-                        input(type="text", name="name" size="20")
-                        input(type="text", name="age" size="20")
-                        input(type="submit", value="submit")
+                form(action="/new", method="post")
+                    input(type="text", name="name" size="20")
+                    input(type="text", name="age" size="20")
+                    input(type="submit", value="submit")
 
     
