--- a/template/abc.pug
+++ b/template/abc.pug
@@ -7,6 +7,7 @@ block content
     h1(class="hh") Hello world  
     h3(class="hh") #{age}
     h3(class="nn") #{name}
+    h3(class="nn") #{name}
 
     -var u = {user :'sdf'}
     #u
