--- a/template/abc.pug
+++ b/template/abc.pug
@@ -4,7 +4,10 @@ block title
     title output page
 
 block content
-    h1(class="hh") Hello world  
+
+    h1 #{name}
+    h1 #{roll}
+//    h1(class="hh") Hello world  
     h3(class="hh") #{age}
     h3(class="nn") #{name}
     h3(class="nn") #{sl}
