--- a/template/frm.pug
+++ b/template/frm.pug
@@ -6,8 +6,11 @@ block content
         div
             div
                 form(action="/new", method="post")
-                    input(type="text", name="name" size="20")
-                    input(type="text", name="age" size="20")
-                    input(type="submit", value="submit")
+                    div
+                        span Roll NO:
+                        input(type="text", name="rollno" size="20")
+                        span Name:
+                        input(type="text", name="name" size="20")
+                        input(type="submit", value="submit")
 
     
